--- a/plantilla.html
+++ b/plantilla.html
@@ -16,7 +16,7 @@
       	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     	<![endif]-->
 	</head>
-	<body>
+	<body ng-app="">
 		<div class="container">
 			<div class="row">
 				<h3>HELLO WORLD!</h3>
